--- a/.travis.yml
+++ b/.travis.yml
@@ -25,12 +25,8 @@ before_install:
   - pip install pytest
 
 install:
-  # Using pip instead of setup.py ensures we install a non-compressed version of the package
-  # (as opposed to an egg), which is necessary to collect coverage.
-  # We still get the benefit of testing an installed version over the
-  # test version to iron out installation file-inclusion bugs but can
-  # also collect coverage.
-  - pip install .
+  - env
+  - pip install . --no-deps -vv
 
 script:
   - pytest test.py
