--- a/.travis.yml
+++ b/.travis.yml
@@ -20,12 +20,21 @@ before_install:
   # Useful for debugging any issues with conda
   - conda info -a
 
-  - conda create -q -n test-environment -c pytorch -c conda-forge python=$TRAVIS_PYTHON_VERSION scipy numpy intel-ipp
+  - |
+    conda create -q -n test-environment \
+      -c pytorch \
+      -c conda-forge \
+      python=$TRAVIS_PYTHON_VERSION \
+      pip \
+      scipy \
+      numpy \
+      intel-ipp \
+      libjpeg-turbo
   - source activate test-environment
   - pip install pytest
 
 install:
-  - env
+  - env | sort
   - pip install . --no-deps -vv
 
 script:
