--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,6 @@ before_install:
   - conda update -q conda
   # Useful for debugging any issues with conda
   - conda info -a
-
   - |
     conda create -q -n test-environment \
       -c pytorch \
@@ -37,7 +36,7 @@ install:
   - env | sort
   - ls $CONDA_PREFIX/include
   - ls $CONDA_PREFIX/lib
-  - pip install . --no-deps -vv
+  - CPPFLAGS="-I$CONDA_PREFIX/include" LDFLAGS="-L$CONDA_PREFIX/lib" pip install . --no-deps -vv
 
 script:
   - pytest test.py
